identitygriddir = $(includedir)/dune/identitygrid/identitygrid

identitygrid_HEADERS = identitygridentitypointer.hh identitygridhierarchiciterator.hh \
                  identitygridleafiterator.hh identitygridentity.hh \
                  identitygridgeometry.hh identitygridindexsets.hh identitygridintersectioniterator.hh \
                  identitygridleveliterator.hh

include $(top_srcdir)/am/global-rules
