identitygriddir = $(includedir)/dune/grid/identitygrid

identitygrid_HEADERS = identitygridentitypointer.hh identitygridhierarchiciterator.hh \
                  identitygridleafiterator.hh identitygridentity.hh identitygridintersections.hh \
                  identitygridgeometry.hh identitygridindexsets.hh identitygridintersectioniterator.hh \
                  identitygridleveliterator.hh

include $(top_srcdir)/am/global-rules
